--- a/project/src/templates/pages/admin.html
+++ b/project/src/templates/pages/admin.html
@@ -3,16 +3,15 @@
 <html>
     <head>
       <link rel="stylesheet" href="{% static 'project/styles.css' %}">
-      <title>Hi</title>
+      <title>Chatter | Admin Home</title>
     </head>
 
     <body>
-      <h2>Hello {{ user | safe }}</h2>
+      <h2>Hello {{ user }}</h2>
       <a href="{% url 'logout' %}">Log out</a>
       <h3>Send a message to the board</h3>
-      <form action="{% url 'send_message' %}" method="GET">
-      <!--<form action="{% url 'send_message' %}" method="POST">
-        {% csrf_token %}-->
+      <form action="{% url 'send_message' %}" method="POST">
+        <!--{% csrf_token %}-->
         <select name="receiver">
           {% for user in users %}
             {% if user is users.0 %}
