--- a/project/src/templates/pages/logged.html
+++ b/project/src/templates/pages/logged.html
@@ -10,8 +10,9 @@
       <h2>Hello {{ user }}</h2>
       <a href="{% url 'logout' %}">Log out</a>
       <h3>Send a message to the board</h3>
-      <form action="{% url 'send_message' %}" method="POST">
-        <!--{% csrf_token %}-->
+      <form action="{% url 'send_message' %}" method="GET">
+      <!--<form action="{% url 'send_message' %}" method="POST">
+        {% csrf_token %}-->
         <select name="receiver">
           {% for user in users %}
             {% if user is users.0 %}
